# dostools

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/: ToIntegrate.py
src/dostools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/loss/: loss.py
src/models/: architectures.py  models.py  training.py
src/postprocessing/: postprocessing.py
src/utils/: utils.py
tests/: Adam-noshift.ipynb  AdamBatch-StandardTraining-Copy1.ipynb  AdamBatch-StandardTraining.ipynb  Alignment-Test.ipynb  Alignment-scipy-wass-Adambatch-Overfit10.ipynb  Alignment-scipy-wass-Adambatch.ipynb  Alignment-scipy-wass-squared.ipynb  Alignment-scipy-wass.ipynb  BlackBox Optimization.ipynb  CondensedDataset-Splines.ipynb  CondensedDataset-contains quartic.ipynb  DataExploration - Optimization.ipynb  Dynamic shift model-kernel.ipynb  Dynamic shift model.ipynb  DynamicAdam_trainalignment  Fourier-Transform Linalgmodel.ipynb  Fourier-Transform torchmodel.ipynb  Jitteralignment-Adaptive.ipynb  LossFunctionTest.ipynb  Monte Carlo - Splines.ipynb  Monte Carlo2 - Splines.ipynb  NN-Continuous-Copy1.ipynb  NN-Continuous-Energywise-tanh.ipynb  NN-Continuous-Energywise.ipynb  NN-Continuous.ipynb  NelderMead Optimization.ipynb  NewKernelFeatures.ipynb  Packagetest.ipynb  ScriptEditor - BFRigid-full.ipynb  ScriptEditor - optimization.ipynb  Shiftanalysis.ipynb  SplineGeneration-scriptsanddata.ipynb  SplineGeneration.py  Splines-Linalgmodel.ipynb  Splines_beststate_0  Splines_testalign_0  Untitled.ipynb  biased_test_index.npy  biased_train_index.npy  eigen_0.npy  (+4 more)
tests/tests/: BF-Corr-tests.ipynb  (+25 more)
(+163 files in other folders)
