[metadata]
name = DOSTools
version = 0.0.0
authors = "How Wei Bin <weibin.how@epfl.ch>"
url = https://github.com/HowWeiBin/DOSTools
description =  "Helpful Tools for building Machine Learning Models for Density of States (DOS)"
long_description = file: README.md
long_description_content_type = text/markdown
keywords = DOS, Machine Learning, Density  of States
license = "LGPL-2.1-or-later"
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3


[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src